--- a/index.html
+++ b/index.html
@@ -137,10 +137,12 @@
                         <!-- <a href="feature.html" class="dropdown-item">Features</a> -->
                         <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
                         <a href="testimonial.html" class="dropdown-item">Müştəri məmnuniyyəti</a>
+                        <a href="https://www.taxes.gov.az/az/page/ar-vergi-mecellesi" class="dropdown-item">Vergi məcəlləsi</a>
                         
                         <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
                     </div>
                 </div>
+                <a href="https://www.taxes.gov.az/az/page/erize-arayis-ve-sened-formalari" class="nav-item nav-link">Ərizə, arayış və sənəd formaları</a>
                 <a href="contact.html" class="nav-item nav-link">Bizimlə əlaqə</a>
             </div>
             <a href="contact.html" class="btn btn-sm btn-light rounded-pill py-2 px-4 d-none d-lg-block nav-item nav-link">Başla</a>
